--- a/docker-weblate/weblate/Dockerfile
+++ b/docker-weblate/weblate/Dockerfile
@@ -3,14 +3,21 @@ FROM docker-base
 # Add user early to get a consistent userid
 RUN useradd --shell /bin/sh --user-group weblate
 
-RUN apt-get update
-RUN env DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y ssh curl python-virtualenv python-lxml python-pillow python-psycopg2 git
+RUN apt-get update 
+
+RUN env DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y ssh curl python-virtualenv python-lxml python-pillow python-psycopg2 python-mysqldb git mercurial gettext
 
 WORKDIR /app
 RUN python -m virtualenv --system-site-packages .
 ADD requirements.txt /tmp/requirements.txt
 RUN bin/pip install -r /tmp/requirements.txt
 RUN rm /tmp/requirements.txt
+
+ADD wait-mysql /app/bin/
+RUN curl --location --silent --show-error --fail \
+        https://github.com/Barzahlen/waitforservices/releases/download/v0.1/waitforservices \
+        > /usr/local/bin/waitforservices && \
+    chmod +x /usr/local/bin/waitforservices
 
 WORKDIR /tmp
 
@@ -19,10 +26,11 @@ RUN install -d -o root -g root -m 755 /app/etc
 RUN cp /app/lib/python2.7/site-packages/weblate/settings_example.py /app/etc/settings.py
 RUN ln -s /app/etc/settings.py /app/lib/python2.7/site-packages/weblate/settings.py
 ENV DJANGO_SETTINGS_MODULE weblate.settings
+ENV START_CMD "/app/bin/django-admin"
 
 VOLUME ["/app/etc", "/app/data"]
+# RUN useradd -m docker && echo "docker:docker" | chpasswd && adduser docker sudo
 USER weblate
-
 EXPOSE 8000
-ENTRYPOINT ["/app/bin/django-admin"]
+ENTRYPOINT ["/app/bin/wait-mysql"]
 CMD ["runserver", "0.0.0.0:8000"]
