--- a/docker-weblate/weblate/requirements.txt
+++ b/docker-weblate/weblate/requirements.txt
@@ -1,11 +1,11 @@
-Django==1.8.4
-django_compressor==1.5
-PyJWT==0.3.1
+Django==1.8.3
+PyJWT==1.4.0
 Whoosh==2.7.0
-diff-match-patch==20110725.1
+argparse==1.3.0
+diff-match-patch==20121119
 django-crispy-forms==1.5.2
 oauthlib==1.0.3
-python-dateutil==2.3
+python-dateutil==2.4.2
 python-openid==2.2.5
 python-social-auth==0.2.12
 requests==2.7.0
@@ -18,3 +18,8 @@ pydns==2.3.6
 Babel==2.0
 Weblate==2.4
 pyuca==1.1
+python-memcached==1.57
+django_compressor==1.5.0
+# Following are installed using apt:
+# Pillow
+# lxml
