--- a/docker-nginx/deployment/Dockerfile
+++ b/docker-nginx/deployment/Dockerfile
@@ -1,9 +1,9 @@
-FROM debian:jessie
+FROM docker-base
 
 RUN apt-key adv --keyserver hkp://pgp.mit.edu:80 --recv-keys 573BFD6B3D8FBC641079A6ABABF5BD827BD9BF62
-RUN echo "deb http://nginx.org/packages/mainline/debian/ jessie nginx" >> /etc/apt/sources.list
+RUN echo "deb http://nginx.org/packages/mainline/ubuntu/ trusty nginx" >> /etc/apt/sources.list
 
-ENV NGINX_VERSION 1.9.5-1~jessie
+ENV NGINX_VERSION 1.9.5-1~trusty
 
 RUN apt-get update && \
     apt-get install -y ca-certificates nginx=${NGINX_VERSION} && \
@@ -14,6 +14,11 @@ RUN ln -sf /dev/stdout /var/log/nginx/access.log
 RUN ln -sf /dev/stderr /var/log/nginx/error.log
 
 VOLUME ["/var/cache/nginx"]
+
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY conf.d/ /etc/nginx/conf.d/
+COPY access/ /etc/nginx/access/
+COPY 404.html /usr/share/nginx/html/404.html
 
 EXPOSE 80 443
 
